remove add to cart for composition

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -70,7 +70,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -85,7 +85,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -100,7 +100,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -115,7 +115,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -130,7 +130,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -145,7 +145,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
@@ -160,7 +160,7 @@
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
-                <a class="link-add-card" href="">Ajouter au panier</a>
+                <label class="link-add-card" >Composition</label>
             </div>
         </th:block>
     </div>
