--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Entrées'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -66,7 +66,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Bases'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -81,7 +81,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Protéines'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -96,7 +96,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Garnitures'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -111,7 +111,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Graines'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -126,7 +126,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Marinades'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -141,7 +141,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Sauces'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
@@ -156,7 +156,7 @@
         <th:block th:each="item : ${items}">
             <div class="card" th:if="${item.category} == 'Desserts'">
                 <a class="link-product" th:href="@{'/items/' + ${item.id}}">
-                    <img th:src="@{${item.image.getPath()}}" alt="">
+                    <img th:src="@{'/images/' +${item.image.getPath()}}" alt="">
                     <span th:text="${item.price} + ' €'"> price</span>
                     <p th:text="${item.name}">name</p>
                 </a>
