--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -8,7 +8,7 @@ input{font-family: 'Source Sans Pro'}
 /* Card */
 #modal_card{overflow: hidden; z-index: 2;position: absolute; top: 67px; right: 25px; height: 0; width: 0; background-color: #fff; border-radius: 25px 0px 25px 25px; box-shadow: 0 5px 10px rgb(154 160 185 / 45%), 0 15px 40px rgb(166 173 201 / 20%); transition: all 0.4s ease;}
 #modal_card.active{width: calc(100% - 50px); height: calc(100vh - 92px);}
-
+#modal_card .address{}
 /* Header */
 header{padding: 25px; transition: all 0.4s ease; position: relative;}
 header.active{background-color: #fff; border-bottom-right-radius: 50px; box-shadow: 0 5px 10px rgb(154 160 185 / 45%), 0 15px 40px rgb(166 173 201 / 20%); width: calc(100% - 50px);}
