style graph page

--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -7,12 +7,10 @@
     <script th:inline="javascript">
 
         function mapToDataSource(list) {
-            console.log(list);
             let array = [];
             list.forEach(el => {
                array.push([el.name,el.nb]);
             });
-            console.log(array);
             return array;
         }
 
@@ -35,8 +33,8 @@
                 data.addRows(array);
                 var options = {
                     'title': 'Répartitions des types d\'items',
-                    'width': 900,
-                    'height': 800
+                    width:"100%",
+                    height:"100%"
                 };
                 var chart = new google.visualization.ColumnChart(document.getElementById('bar_div'));
                 chart.draw(data, options);
@@ -56,8 +54,8 @@
                 var options = {
                     'title': 'Répartition des commandes',
                     pieSliceText: 'label',
-                    'width': 900,
-                    'height': 800
+                    width:"100%",
+                    height:"100%"
                 };
 
                 // Instantiate and draw our chart, passing in some options.
@@ -74,9 +72,9 @@
 <body>
 <div th:replace="~{fragments/card :: card}"></div>
 <div th:replace="~{fragments/header :: header}"></div>
-<div style="display:flex; flex-direction:row;">
-    <div id="chart_div"></div>
-    <div id="bar_div"></div>
+<div class="graph_wrapper">
+    <div class="chart" id="chart_div"></div>
+    <div class="chart" id="bar_div"></div>
 </div>
 <!--
 <th:block th:each="status : ${nbStatus}">
