--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -182,3 +182,10 @@ input[name="changestatusbutton"]{width:100%; border: none;}
 .cadiv{display:flex; justify-content:center; width: 100%;}
 .ca h1{color:#50384b!important; margin: 0;}
 .ca h2{text-decoration: underline; color:#50384b!important;}
+
+/* Graphiques stats */
+.graph_wrapper{  display: grid;grid-auto-columns: 1fr;grid-template-columns: 1fr 1fr;grid-template-rows: 1fr;gap: 0px 0px;grid-template-areas:". ."; }
+.chart {width:100%; height:50vh;}
+@media (max-width: 750px) {
+    .graph_wrapper{grid-template-columns:  1fr;grid-template-rows: 1fr 1fr;grid-template-areas: "." "."; }
+}
