--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -28,7 +28,7 @@
         <input class="form-control form-full-w" type="text" placeholder="Dupont" name="category">
     </div>
     <div class="form-input-container">
-        <label>Prix</label>
+        <label>Description</label>
         <input class="form-control form-full-w" type="text" placeholder="Jean" name="description">
     </div>
     <div class="form-input-container">
