--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 
 <form th:action="@{/login}" th:object="${loginForm}" method="post" class="form">
     <div class="form-input-container">
-        <label>Adresse email :</label>
+        <label>Nom d'utilisateur :</label>
         <input name="username" class="form-control form-full-w" type="text" placeholder="jeandupont@gmail.com">
     </div>
 
