input to password

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-input-container">
             <label>Mot de passe :</label>
-            <input class="form-control form-full-w" type="text" placeholder="Dupont" name="password">
+            <input class="form-control form-full-w" type="password" placeholder="Dupont" name="password">
         </div>
         <span th:if="${err}">[[${err}]]</span>
         <input type="submit" class="btn" value="Créer mon compte">
