--- a/src/main/resources/templates/fragments/card.html
+++ b/src/main/resources/templates/fragments/card.html
@@ -7,7 +7,7 @@
       <div class="product no-float">
         <div class="product-body">
           <img  th:src="@{'/images/' + ${elem.item.image.getPath()}}" alt="">
-          <span th:utext="${elem.item.name} + '<b> ' + ${elem.quantity} +'</b>'"></span>
+          <span th:data="${elem.item.price}" th:utext="${elem.item.name} + '<b> ' + ${elem.quantity} +'</b>'"></span>
         </div>
         <!--<img src="img/delete.svg" alt="" class="delete-product" data="${loop.index}" onclick="card_delete(this)">-->
         <img src="img/delete.svg" alt="" class="delete-product" onclick="card_delete(this)" th:data="${elem.item.id}">
